--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -257,7 +257,7 @@ h2 {
 }
 
 .member-image {
-    max-width: 43%;
+    max-width: 30%;
     width: 119px;
     border-radius: 3px;
     margin-right: 8px;
@@ -387,6 +387,9 @@ h2 {
         font-size: 18px;
     }
     .option-text {
+        font-size: 18px;
+    }
+    .article-text {
         font-size: 18px;
     }
     .discover-option {
