--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-    <title>Ducks0ci3ty</title>
+    <title>{{page.title}} - Ducks0ci3ty</title>
     <link rel="icon" href="/assets/images/icon.png" />
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="apple-touch-icon" href="/assets/images/icon.png">
