--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -421,3 +421,24 @@ h2 {
         width: 96.5%;
     }
 }
+
+pre {
+    background:rgba(0,0,0,0.9);
+    border:1px solid rgba(255,255,255,0.15);
+    padding:10px;
+    font-size:16px;
+    color:#ffffff;
+    word-wrap:normal;
+    overflow:auto;
+    overflow-y:hidden
+   }
+
+code {
+    background:rgba(0,0,0,0.9);
+    padding:10px;
+    font-size:16px;
+    color:#ffffff;
+    word-wrap:normal;
+    overflow:auto;
+    overflow-y:hidden
+   }
