--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
             <div class="menu-container">
                 <a class="menu a" href="/members">Members</a>
                 <a class="menu b" href="/posts">Posts</a>
-                <a class="menu a" href="/discover">Discover</a>
+                <!--<a class="menu a" href="/discover">Discover</a>-->
             </div>
         </div>
     </header>
@@ -34,33 +34,33 @@
 </body>
 <div class="news-container">
     <h2>Featured Content</h2>
-    <a href="/" class="news-left">
-        <img class="news-img" align="left" src="/assets/images/touhou.png" alt="TouHou Simulator">
+    <a href="https://et3rnos.github.io/" target="_blank" class="news-left">
+        <img class="news-img" align="left" src="/assets/images/et3rnos.png" alt="Et3rnos">
         <div class="news-content">
-            <h3 class="news-title">TouHou Simulator</h3>
-            <p class="content-description">Touhou Simulator! A shooter game where you must defend yourself from the bullets throwned by the enemy.</p>
+            <h3 class="news-title">Et3rnos' Blog</h3>
+            <p class="content-description">A blog maintained by one of our members, Et3rnos, covering lots of CTF writeups.</p>
         </div>
     </a>
-    <a href="/" class="news-right">
-        <img class="news-img" align="left" src="/assets/images/minereview_small.png" alt="Minecraft Review">
+    <a href="https://et3rnos.github.io/other/ducks0ci3ty-ctf-team-test.html" class="news-right">
+        <img class="news-img" align="left" src="/assets/images/ctf.png" alt="CTF">
         <div class="news-content">
-            <h3 class="news-title">Minecraft Review</h3>
-            <p class="content-description">Curious about the game Minecraft? Don't know if you should buy it? We'll answer your questions with this review!</p>
+            <h3 class="news-title">CTF Team Test</h3>
+            <p class="content-description">Solve this easy test composed by 5 challenges to gain a place in our CTF Team!</p>
         </div>
     </a>
-    <a href="/articles/minecraftserver" class="news-left">
-        <img class="news-img" align="left" src="/assets/images/mineserver_small.png" alt="Minecraft Server">
+    <a href="https://ctftime.org/team/114402" class="news-left">
+        <img class="news-img" align="left" src="/assets/images/ctf.png" alt="CTF">
         <div class="news-content">
-            <h3 class="news-title">Minecraft Server</h3>
-            <p class="content-description">Enter our Minecraft Server with reserved slots and with just 1 rule. We allow cracked players to join!
+            <h3 class="news-title">CTFTime Page</h3>
+            <p class="content-description">Keep track of our team's score and progress on the many CTFs we participated.
             </p>
         </div>
     </a>
     <a href="/" class="news-right">
-        <img class="news-img" align="left" src="/assets/images/r6s_small.png" alt="Rainbow Six Siege Review">
+        <img class="news-img" align="left" src="/assets/images/hackthebox.png" alt="HackTheBox">
         <div class="news-content">
-            <h3 class="news-title">Rainbow Six Siege Review</h3>
-            <p class="content-description">Discover why is this game so popular and if it is a game that you must play. Check our review!</p>
+            <h3 class="news-title">HackTheBox Rank</h3>
+            <p class="content-description"><img src="https://www.hackthebox.eu/badge/team/image/2445" alt="Hack The Box"></p>
         </div>
     </a>
 </div>
