--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,6 @@
     <div class="body-container">
         {{ content }}
     </div>
-</body>
 <div class="news-container">
     <h2>Featured Content</h2>
     <a href="https://et3rnos.github.io/" target="_blank" class="news-left">
@@ -64,4 +63,6 @@
         </div>
     </a>
 </div>
+</body>
 </html>
+<!--Proudly made by Et3rnos-->
